# emotion-engine

./: .gitignore  README.md  ae_dataset.py  analyze_failures.py  audit_metrics.py  body_sense.py  check_acc.py  check_api.py  check_api2.py  check_categories.py  check_extra.py  check_interval.py  check_issues.py  check_metrics.py  check_stress.py  context_pad.py  create_lhm_shortcut.ps1  create_shortcuts.ps1  cross_validate.py  dashboard.html  data_audit.py  demo_l4.py  demo_stress.py  dirty_buffer.py  download_alibaba.py  download_azure.py  download_gcs.py  download_more.py  download_real_data.py  ema_filter.py  ema_train_results.json  emotion_output.py  eval_business.py  eval_business_v2.py  final_validation.py  five_layer_analysis.md  gen_massive_test.py  gen_report.py  habituation.py  kalman_filter.py  (+59 more)
models/: ae_best.json  ae_stats.json  training_history.json
scripts/: all_data_compare.py  analyze_stress.py  analyze_v62.py  check_acc.py  check_categories.py  check_csv.py  compare_residuals.py  debug_pad.py  debug_target.py  demo_extreme.py  download_alibaba.py  download_azure.py  gen_massive_test.py  gen_report.py  real_data_compare.py  stress_compare.py  test_claude_code.py
tests/: test_kalman_vs_ode_csv.py  test_l4_proxy.py  test_stabilizer.py
