[project]
name = "emotion-engine-server"
version = "6.3.0"
description = "计算机情绪引擎 — 服务器版检测器 (Server Version Detector)"
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
l4 = ["requests>=2.28"]
report = ["python-docx>=0.8"]
data = ["pandas>=1.5", "numpy>=1.23"]
windows = ["WMI>=1.5"]
dev = ["pytest>=7.0", "mypy>=1.0", "ruff>=0.1"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
